# thriftrw-go

./: .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  Makefile  README.md  RELEASE.md  WORKSPACE  gen.go  glide.yaml  go.mod  go.sum  main.go  main_test.go  tools.go  tools_test.go  version.go
.github/workflows/: fossa.yaml  go.yml
ast/: BUILD.bazel  annotation.go  annotation_test.go  basetypeid_string.go  constant.go  definition.go  doc.go  header.go  line_no.go  line_no_test.go  mock_visitor_test.go  node.go  position.go  position_test.go  program.go  type.go  visitor.go  walk.go  walk_test.go
cmd/thriftbreak/: main.go  main_test.go
cmd/thriftlint/: .gitignore  lint.go  main.go  rule.go
cmd/thriftrw-list-deps/: BUILD.bazel  README.md  main.go  main_test.go
compile/: BUILD.bazel  annotation.go  annotation_test.go  compiler.go  compiler_test.go  constant.go  constant_test.go  constant_value.go  constant_value_test.go  container.go  container_test.go  cycle.go  cycle_test.go  doc.go  enum.go  enum_test.go  error.go  field.go  fs_test.go  module.go  module_test.go  namespace.go  namespace_test.go  once.go  options.go  primitive.go  primitive_test.go  scope.go  scope_test.go  service.go  service_test.go  string.go  string_test.go  struct.go  struct_test.go  type.go  type_test.go  typedef.go  typedef_test.go  unit.go
envelope/: BUILD.bazel  envelope.go  envelope_test.go
envelope/internal/exception/: types.go
envelope/internal/tests/enums/: idl.go  types.go
envelope/internal/tests/exceptions/: idl.go  types.go
envelope/internal/tests/services/: cache_clear.go  cache_clearafter.go  conflictingnames_setvalue.go  idl.go  keyvalue_deletevalue.go  keyvalue_getmanyvalues.go  keyvalue_getvalue.go  keyvalue_setvalue.go  keyvalue_setvaluev2.go  keyvalue_size.go  non_standard_service_name_non_standard_function_name.go  types.go
envelope/internal/tests/structs/: idl.go  types.go
envelope/internal/tests/typedefs/: idl.go  types.go
envelope/internal/tests/unions/: idl.go  types.go
envelope/stream/: envelope.go
hooks/: pre-commit
idl/: BUILD.bazel  config.go  config_test.go  error.go  info.go  info_test.go  parser.go  parser_test.go  position.go  thriftmodule.go
idl/internal/: BUILD.bazel  docstring.go  docstring_test.go  error.go  field.go  generated.sh  lex.go  lex.rl  parser.go  position.go  quote.go  quote_test.go  thrift.y  y.go  y.output
internal/: error.go  error_test.go
internal/breaktest/: repo.go
internal/compare/: compare.go  compare_test.go
internal/concurrent/: BUILD.bazel  range.go  range_test.go
internal/constants/: constants.go
internal/curry/: BUILD.bazel  one.go  one_test.go
internal/envelope/: BUILD.bazel  client.go  client_test.go  exception.thrift  gen.go  gen_test.go  mock_client_test.go  mock_protocol_test.go  mock_server_test.go  server.go  server_test.go
internal/envelope/envelopetest/: BUILD.bazel  client.go  equal.go  gen.go  server.go
internal/envelope/exception/: BUILD.bazel  exception.go  idl.go  types.go  versioncheck.go
internal/frame/: BUILD.bazel  client.go  client_server_test.go  client_test.go  doc.go  mock_reader_test.go  mock_writer_test.go  reader.go  reader_test.go  server.go  server_test.go  writer.go  writer_test.go
internal/git/: git.go  git_test.go
internal/goast/: package.go  (+2 more)
internal/plugin/: BUILD.bazel  empty.go  errors.go  flag.go  flag_test.go  gen.go  gen.sh  handle.go  mock_test.go  multi.go  multi_test.go  transport.go  transport_test.go
internal/plugin/builtin/pluginapigen/: BUILD.bazel  handle.go
internal/plugin/handletest/: BUILD.bazel  mock.go
internal/plugin/testdata/: BUILD.bazel  another-empty-plugin.go  empty-plugin.go  thriftrw-plugin-another-empty  thriftrw-plugin-another-handshake-failed  thriftrw-plugin-empty
internal/process/: BUILD.bazel  client.go  client_test.go
internal/semver/: BUILD.bazel  compat.go  compat_test.go  range.go  semver.go  semver_test.go
lint/: lint.go  simple_rule.go  sort.go
plugin/: BUILD.bazel  api.thrift  doc.go  gen.go  mock_service_generator_test.go  plugin.go  plugin_test.go  template.go  template_test.go
plugin/api/: BUILD.bazel  api.go  constants.go  idl.go  plugin.go  plugin_client.go  plugin_goodbye.go  plugin_handler.go  plugin_handshake.go  servicegenerator.go  servicegenerator_client.go  servicegenerator_generate.go  servicegenerator_handler.go  types.go  versioncheck.go
plugin/api/service/plugin/: client.go  envelope.go  goodbye.go  handler.go  handshake.go
plugin/api/service/servicegenerator/: client.go  envelope.go  generate.go  handler.go
plugin/newapi/: constants.go  generateservice_generate.go  gostructtaggerservice_tag.go  newapi.go  newapi.thrift  plugin_handshake.go  types.go  versioncheck.go
plugin/plugintest/: BUILD.bazel  api.go  gen.go
protocol/: BUILD.bazel  binary.go  binary_test.go  protocol.go  value_test.go
protocol/binary/: BUILD.bazel  bench_after.out  bench_before.out  bench_write_after.txt  bench_write_before.txt  bench_write_stat.txt  benchstat.out  common.go  cpu_after.out  cpu_before.out  doc.go  envelope.go  error.go  fuzz.go  lazy_field_list.go  lazy_list.go  protocol.go  protocol_test.go  reader.go  reader_benchmark_test.go  responder.go  stream_envelope.go  stream_reader.go  stream_reader_test.go  stream_writer.go  stream_writer_test.go  string_post_go120.go  string_pre_go120.go  writer.go
protocol/envelope/: responder.go
protocol/stream/: envelope.go  stream.go
ptr/: BUILD.bazel  ptr.go
scripts/: cover.sh  updateLicense.py  updateLicenses.sh
thriftbreaktest/: repo.go
thriftreflect/: BUILD.bazel  thriftmodule.go
thrifttest/: BUILD.bazel  gen.go  mock_protocol.go
thrifttest/stream/: gen.go  mock_stream.go
thrifttest/streamtest/: gen.go  mock_stream.go
version/: BUILD.bazel  check.go  internal.thrift  no_check.go  semver.go  semver_test.go  version.go  version_test.go
wire/: BUILD.bazel  doc.go  envelope.go  evaluate.go  lazy_field_list.go  lazy_list.go  lazy_list_test.go  type.go  type_string.go  unsafe.go  value.go  value_equals.go  value_primitive.go  value_test.go
(+21 files in other folders)
