load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@org_uber_go_multierr//:go_default_library",
        "@org_uber_go_thriftrw//compile:go_default_library",
        "@org_uber_go_thriftrw//gen:go_default_library",
        "@org_uber_go_thriftrw//internal/plugin:go_default_library",
        "@org_uber_go_thriftrw//internal/plugin/builtin/pluginapigen:go_default_library",
        "@org_uber_go_thriftrw//version:go_default_library",
    ],
)

go_binary(
    name = "thriftrw",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_thriftrw//compile:go_default_library",
    ],
)
