load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "annotation.go",
        "compiler.go",
        "constant.go",
        "constant_value.go",
        "container.go",
        "cycle.go",
        "doc.go",
        "enum.go",
        "error.go",
        "field.go",
        "module.go",
        "namespace.go",
        "once.go",
        "options.go",
        "primitive.go",
        "scope.go",
        "service.go",
        "string.go",
        "struct.go",
        "type.go",
        "typedef.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_thriftrw//ast:go_default_library",
        "@org_uber_go_thriftrw//idl:go_default_library",
        "@org_uber_go_thriftrw//wire:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "annotation_test.go",
        "compiler_test.go",
        "constant_test.go",
        "constant_value_test.go",
        "container_test.go",
        "cycle_test.go",
        "enum_test.go",
        "fs_test.go",
        "module_test.go",
        "namespace_test.go",
        "primitive_test.go",
        "scope_test.go",
        "service_test.go",
        "string_test.go",
        "struct_test.go",
        "type_test.go",
        "typedef_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_thriftrw//ast:go_default_library",
        "@org_uber_go_thriftrw//idl:go_default_library",
        "@org_uber_go_thriftrw//wire:go_default_library",
    ],
)
