load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["parser.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_thriftrw//ast:go_default_library",
        "@org_uber_go_thriftrw//idl/internal:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["parser_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_kr_pretty//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_thriftrw//ast:go_default_library",
    ],
)
