load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "binary.go",
        "protocol.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_thriftrw//protocol/binary:go_default_library",
        "@org_uber_go_thriftrw//wire:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "binary_test.go",
        "value_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_thriftrw//protocol/binary:go_default_library",
        "@org_uber_go_thriftrw//wire:go_default_library",
    ],
)
