load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "envelope.go",
        "evaluate.go",
        "lazy_list.go",
        "type.go",
        "type_string.go",
        "unsafe.go",
        "value.go",
        "value_equals.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "lazy_list_test.go",
        "value_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
