load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "gen.go",
        "server.go",
    ],
    importpath = "",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_uber_go_thriftrw//internal/envelope/exception:go_default_library",
        "@org_uber_go_thriftrw//protocol:go_default_library",
        "@org_uber_go_thriftrw//ptr:go_default_library",
        "@org_uber_go_thriftrw//wire:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "gen_test.go",
        "mock_protocol_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_thriftrw//internal/envelope/envelopetest:go_default_library",
        "@org_uber_go_thriftrw//internal/envelope/exception:go_default_library",
        "@org_uber_go_thriftrw//ptr:go_default_library",
        "@org_uber_go_thriftrw//wire:go_default_library",
    ],
)
