load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "empty.go",
        "errors.go",
        "flag.go",
        "gen.go",
        "handle.go",
        "multi.go",
        "transport.go",
    ],
    importpath = "",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_anmitsu_go_shlex//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
        "@org_uber_go_multierr//:go_default_library",
        "@org_uber_go_thriftrw//internal/concurrent:go_default_library",
        "@org_uber_go_thriftrw//internal/envelope:go_default_library",
        "@org_uber_go_thriftrw//internal/multiplex:go_default_library",
        "@org_uber_go_thriftrw//internal/process:go_default_library",
        "@org_uber_go_thriftrw//internal/semver:go_default_library",
        "@org_uber_go_thriftrw//plugin/api:go_default_library",
        "@org_uber_go_thriftrw//protocol:go_default_library",
        "@org_uber_go_thriftrw//version:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "flag_test.go",
        "multi_test.go",
        "transport_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_thriftrw//internal/envelope:go_default_library",
        "@org_uber_go_thriftrw//internal/envelope/envelopetest:go_default_library",
        "@org_uber_go_thriftrw//internal/frame:go_default_library",
        "@org_uber_go_thriftrw//internal/multiplex:go_default_library",
        "@org_uber_go_thriftrw//internal/plugin:go_default_library",
        "@org_uber_go_thriftrw//internal/plugin/handletest:go_default_library",
        "@org_uber_go_thriftrw//plugin/api:go_default_library",
        "@org_uber_go_thriftrw//plugin/plugintest:go_default_library",
        "@org_uber_go_thriftrw//protocol:go_default_library",
        "@org_uber_go_thriftrw//ptr:go_default_library",
        "@org_uber_go_thriftrw//version:go_default_library",
    ],
)
