load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_uber_go_atomic//:go_default_library",
        "@org_uber_go_multierr//:go_default_library",
        "@org_uber_go_thriftrw//internal/frame:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
