load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_mock//gomock:go_default_library",
        "@org_uber_go_thriftrw//plugin/api:go_default_library",
    ],
)
