load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "another-empty-plugin.go",
        "empty-plugin.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = ["@org_uber_go_thriftrw//plugin:go_default_library"],
)

go_binary(
    name = "testdata",
    embed = [":go_default_library"],
    visibility = ["//:__subpackages__"],
)
