load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["handle.go"],
    importpath = "",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_uber_go_thriftrw//internal/plugin:go_default_library",
        "@org_uber_go_thriftrw//plugin:go_default_library",
        "@org_uber_go_thriftrw//plugin/api:go_default_library",
    ],
)
